feat: update card interface

--- a/react-app/src/components/Card.scss
+++ b/react-app/src/components/Card.scss
@@ -16,14 +16,14 @@
   width: 48%;
   padding: 1rem 0;
   box-shadow: 0 7px 5px #d1d1d1;
-  .card_title {
+  .card__title {
     margin: 1rem 0;
     height: 10%;
   }
-  .card_img {
+  .card__img {
     width: 100%;
   }
-  .card_description {
+  .card__description {
     margin: 1rem;
     margin-bottom: 0;
   }
