feat: add inputs

--- a/react-app/src/components/Form.scss
+++ b/react-app/src/components/Form.scss
@@ -1,4 +1,58 @@
+@import '_colors.module.scss';
+
 .card-creator-form__category {
   display: flex;
   gap: 1rem;
+}
+
+.card-creator-form__description {
+  min-width: 50rem;
+  min-height: 10rem;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 7rem;
+  height: 4rem;
+}
+
+.switch__input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch__slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(221, 221, 221);
+  transition: 0.4s;
+}
+
+.switch__slider:before {
+  position: absolute;
+  content: '';
+  height: 3rem;
+  width: 3rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: $backgroundColor;
+  transition: 0.4s;
+}
+
+.switch__input:checked + .switch__slider {
+  background-color: $grayColor;
+}
+
+.switch__input:focus + .switch__slider {
+  box-shadow: 0 0 1px $grayColor;
+}
+
+.switch__input:checked + .switch__slider:before {
+  transform: translateX(3rem);
 }
