--- a/react-app/src/components/Form.scss
+++ b/react-app/src/components/Form.scss
@@ -1,20 +1,45 @@
 @import '_colors.module.scss';
 
-.card-creator-form__category {
+.card-creator-form {
   display: flex;
-  gap: 1rem;
+  flex-direction: column;
+  max-width: 50%;
 }
 
-.card-creator-form__description {
-  min-width: 50rem;
-  min-height: 10rem;
+.card-creator-form__category {
+  display: flex;
+  flex-direction: column;
+  max-height: 10rem;
+  gap: 0 1rem;
+  flex-wrap: wrap;
+}
+
+// .card-creator-form__description {
+//   min-width: 50rem;
+//   min-height: 10rem;
+// }
+
+.input-element__select,
+.input-element__input,
+.checkbox__label {
+  margin-left: 0.5rem;
+}
+
+.card-creator-form__written-switch {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .switch {
   position: relative;
   display: inline-block;
-  width: 7rem;
-  height: 4rem;
+  width: 2.7rem;
+  height: 1.5rem;
+}
+
+.switch__label {
+  display: inline-block;
 }
 
 .switch__input {
@@ -37,10 +62,10 @@
 .switch__slider:before {
   position: absolute;
   content: '';
-  height: 3rem;
-  width: 3rem;
-  left: 4px;
-  bottom: 4px;
+  height: 1.1rem;
+  width: 1.1rem;
+  left: 0.2rem;
+  bottom: 0.2rem;
   background-color: $backgroundColor;
   transition: 0.4s;
 }
@@ -54,5 +79,5 @@
 }
 
 .switch__input:checked + .switch__slider:before {
-  transform: translateX(3rem);
+  transform: translateX(1.1rem);
 }
