--- a/react-app/src/pages/MainPage/MainPage.scss
+++ b/react-app/src/pages/MainPage/MainPage.scss
@@ -7,3 +7,11 @@
 .search-bar-wrapper {
   margin: 0 auto;
 }
+
+.sorry-message {
+  font-size: 3rem;
+}
+
+.loading-message {
+  font-size: 3rem;
+}
