--- a/react-app/src/components/Card/Card.scss
+++ b/react-app/src/components/Card/Card.scss
@@ -1,3 +1,5 @@
+@import '_colors.module.scss';
+
 .cards-wrapper {
   width: 100%;
   margin: 50px auto;
@@ -16,16 +18,20 @@
   width: 48%;
   padding: 1rem 0;
   box-shadow: 0 7px 5px #d1d1d1;
-  .card__title {
-    margin: 1rem 0;
-  }
-  .card__img {
-    width: 100%;
-  }
-  .card__description {
-    margin: 1rem;
-    margin-bottom: 0;
-  }
+  background-color: $backgroundColor;
+  border: none;
+  font-size: 2rem;
+}
+
+.card__name {
+  margin: 1rem 0;
+}
+.card__img {
+  width: 100%;
+}
+.card__description {
+  margin: 1rem;
+  margin-bottom: 0;
 }
 
 @media (min-width: 768px) {
