--- a/react-app/src/components/ModalWindow/ModalWindow.scss
+++ b/react-app/src/components/ModalWindow/ModalWindow.scss
@@ -18,6 +18,7 @@
   background-color: rgb(100, 100, 100);
   z-index: 100;
   opacity: 0.8;
+  cursor: pointer;
 }
 
 .modal-window__body {
@@ -52,10 +53,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .modal-window__img {
   display: block;
   margin: 0 auto;
   width: auto;
+}
+
+.modal-window__description {
+  text-align: left;
 }
