--- a/react-app/src/components/ModalWindow/ModalWindow.scss
+++ b/react-app/src/components/ModalWindow/ModalWindow.scss
@@ -23,7 +23,7 @@
 
 .modal-window__body {
   width: 60%;
-  height: 80%;
+  max-height: 80%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -38,7 +38,6 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: $backgroundColor;
   border: none;
 }
 
@@ -58,7 +57,7 @@
 
 .modal-window__img {
   display: block;
-  margin: 0 auto;
+  margin: 2rem auto;
   width: auto;
 }
 
