--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -12,3 +12,12 @@ html {
 body {
   font-size: 2rem;
 }
+
+button {
+  background-color: $backgroundColor;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
