--- a/react-app/src/components/ModalWindow/ModalWindow.scss
+++ b/react-app/src/components/ModalWindow/ModalWindow.scss
@@ -22,7 +22,7 @@
 }
 
 .modal-window__body {
-  width: 60%;
+  max-width: 80%;
   max-height: 80%;
   position: absolute;
   top: 50%;
@@ -59,6 +59,7 @@
   display: block;
   margin: 2rem auto;
   width: auto;
+  max-width: 100%;
 }
 
 .modal-window__description {
