feat: add page selector

--- a/react-app/src/pages/Main_Page/MainPage.scss
+++ b/react-app/src/pages/Main_Page/MainPage.scss
@@ -15,3 +15,15 @@
 .loading-message {
   font-size: 3rem;
 }
+
+.current-page-input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.current-page-input__select {
+  width: 5rem;
+  height: 4rem;
+  font-size: 2rem;
+}
