fix: links in header can be active fix: card information page creates link in header

--- a/react-app/src/components/Header/Header.scss
+++ b/react-app/src/components/Header/Header.scss
@@ -12,10 +12,11 @@
   list-style-type: none;
 }
 
+.nav__item .active {
+  text-decoration: underline;
+}
+
 .nav__link {
   text-decoration: none;
   color: $whiteTextColor;
-  &:active {
-    color: $backgroundColor;
-  }
 }
