--- a/react-app/src/pages/Main_Page/MainPage.scss
+++ b/react-app/src/pages/Main_Page/MainPage.scss
@@ -1,12 +1,4 @@
-@import '_colors.module.scss';
-
-.main-page {
-  background-color: $backgroundColor;
-}
-
-.search-bar-wrapper {
-  margin: 0 auto;
-}
+@import '../../styles/colors.module';
 
 .sorry-message {
   font-size: 3rem;
