--- a/react-app/src/App.scss
+++ b/react-app/src/App.scss
@@ -1,24 +1,5 @@
-@import '_colors.module.scss';
+@import './styles/_colors.module.scss';
 
-.app {
-  background-color: $backgroundColor;
-}
-
-.container {
+.main-container {
   padding: 2rem;
-}
-
-.h1 {
-  margin-bottom: 2rem;
-}
-
-.link {
-  text-decoration: none;
-  color: $mainTextColor;
-  &:active {
-    text-decoration: underline;
-  }
-  &:hover {
-    text-decoration: underline;
-  }
 }
