--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -1,4 +1,4 @@
-@import '_colors.module.scss';
+@import './styles/colors.module';
 
 * {
   margin: 0;
@@ -10,7 +10,15 @@ html {
 }
 
 body {
+  min-width: 320px;
   font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: $backgroundColor;
+}
+
+.h1 {
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 button {
@@ -20,4 +28,15 @@ button {
 
 ul {
   list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  color: $mainTextColor;
+  &:active {
+    text-decoration: underline;
+  }
+  &:hover {
+    text-decoration: underline;
+  }
 }
