--- a/react-app/src/pages/Card_Info/CardInfo.scss
+++ b/react-app/src/pages/Card_Info/CardInfo.scss
@@ -1,6 +1,23 @@
+@import '../../styles/colors.module';
+
 .go-back-button {
   width: 10rem;
   margin: 2rem 0;
   font-size: 2rem;
-  border: 2px solid red;
+  border: 2px solid $grayColor;
+}
+
+.character-info {
+  max-width: 30rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.character-info__img {
+  width: 100%;
+}
+
+.character-info__description {
+  text-align: left;
+  width: 100%;
 }
