--- a/react-app/src/components/Card_Creator_Form/CardCreatorForm.scss
+++ b/react-app/src/components/Card_Creator_Form/CardCreatorForm.scss
@@ -1,10 +1,11 @@
 @import '../../styles/colors.module';
 
 .card-creator-form {
-  display: flex;
-  flex-direction: column;
-  max-width: 50%;
+  width: 90%;
   margin: 0 auto;
+  .input-element {
+    display: block;
+  }
 }
 
 .card-creator-form__category {
@@ -82,16 +83,9 @@
   transform: translateX(1.1rem);
 }
 
-.card-creator-form__file-upload {
-  display: flex;
-  align-items: center;
-  margin: 0.5rem 0;
-}
-
-.file-upload__img {
-  max-width: 100%;
-}
-
 .card-creator-form__submit-button {
+  display: block;
+  width: 100%;
   height: 4rem;
+  margin: 0 auto;
 }
